--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,11 +8,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  background-image: radial-gradient(
-    circle farthest-side at 50% 100%,rgba(1, 9, 18, 0),
-    rgba(1, 6, 14, 0.6) 36%,
-    rgba(1, 14, 29, 0.6) 55%,
-    rgba(49, 18, 93, 0.4));
+    background-color: white;
 }
 
 a {
@@ -26,6 +22,6 @@ a {
 
 /* example: override wallet button style */
 .wallet-adapter-button:not([disabled]):hover {
-  background-color: #707070;
+  background-color: #fafafa;
 }
 
